# llm-router

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TAGS.md  TODO.md  api_smoke.json  check_db.py  check_models.py  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  llm_router.db  nginx.conf  pyproject.toml  remove_invalid_models.py  router.example.toml  router.toml  router.toml.backup  router.toml.bak  router.toml.model-auto-update.20260422T031102Z.bak  router.toml.model-auto-update.20260423T031101Z.bak  router.toml.model-auto-update.20260423T082841Z.bak  start-pg-sync.sh  test_all_openrouter_free.py  test_new_api.py  test_openai_api.py  test_openai_compatible.py  test_openrouter_free.py  test_results.json  test_summary.md
backend/: README.md  go.mod
docs/: API.md  CHANNEL_MIRRORING.md  DEPLOYMENT_HA.md  QUICKSTART.md  QUICK_COMMANDS.md  README_ENV.md  TAGS.md
examples/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
monitor/: README.md  package.json  vite.config.ts
scripts/: README.md  add_cost_column.py  check-db.sh  check-free-models.sh  check-service.sh  check_and_clean_openrouter_free.py  check_providers_validity.py  cleanup_unused_models.py  create_release.py  create_release.sh  funasr-asr-adapter  funasr_asr_adapter.py  generate_api_key.py  generate_api_key.sh  import-db.sh  list-supported-models.go  list-supported-models.sh  pricing_sync.sh  qwen-tts-adapter  qwen_tts_adapter.py  qwen_tts_voices.json  start-db.sh  start.sh  (+7 more)
(+406 files in other folders)
