[project]
name = "llm-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rinbarpen", email = "lpoutyoumu@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "curl-cffi>=0.6.0",
    "httpx>=0.27.0",
    "huggingface-hub>=1.1.4",
    "openpyxl>=3.1.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "starlette>=0.50.0",
    "tomli>=2.3.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
llm-router = "llm_router:main"
llm-router-monitor = "llm_router:monitor"
llm-router-web = "llm_router:web"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
